# smart-vendor

./: .gitignore  readme.md
applications/sample/wifi-iot/: OAT.xml  README.md  README_zh.md
applications/sample/wifi-iot/app/: ._BUILD.gn  ._beep_demo  ._engine_control  ._hello_world_demo  ._my_first_app  ._smart-vendor  BUILD.gn
applications/sample/wifi-iot/app/beep_demo/: ._BUILD.gn  ._README.md  ._app_demo_beep_control.c  ._hal_iot_gpio_ex.c  ._iot_gpio_ex.h  BUILD.gn  app_demo_beep_control.c  iot_gpio_ex.h
applications/sample/wifi-iot/app/cloud_to_uart/: BUILD.gn  app_demo_iot.c  hisignalling_protocol.c  iot_config.h
applications/sample/wifi-iot/app/core/: app_demo_iot.c  hisignalling_protocol.h  iot_gpio_ex.h  iot_hmac.h  iot_log.h  iot_main.c  iot_profile.c  iot_profile.h
applications/sample/wifi-iot/app/demolink/: BUILD.gn  helloworld.c
applications/sample/wifi-iot/app/engine_control/: ._BUILD.gn  ._README.md  ._hal_iot_gpio_ex.c  ._iot_gpio_ex.h  ._steering_engine_control.c  BUILD.gn  README.md  steering_engine_control.c
applications/sample/wifi-iot/app/hello_world_demo/: ._BUILD.gn  ._README.md  ._hal_iot_gpio_ex.c  ._iot_gpio_ex.h  ._led_example.c  ._oled_demo.c  ._oled_fonts.h  ._oled_ssd1306.c  ._oled_ssd1306.h  BUILD.gn  README.md  hal_iot_gpio_ex.c  led_example.c  oled_demo.c  oled_fonts.h  oled_ssd1306.c
applications/sample/wifi-iot/app/interconnection_client/: BUILD.gn  README.md  app_demo_uart.c  hal_iot_gpio_ex.c  iot_gpio_ex.h
applications/sample/wifi-iot/app/iothardware/: BUILD.gn  led_example.c
applications/sample/wifi-iot/app/iottencent/: BUILD.gn  app_demo_iot.c  cjson_init.c  hal_iot_gpio_ex.c  iot_log.c  iot_profile.c  iot_profile.h
applications/sample/wifi-iot/app/iottencent_demo/: BUILD.gn  README.md  app_demo_iot.c  iot_config.h  iot_main.c  iot_main.h  iot_profile.c
applications/sample/wifi-iot/app/samgr/: BUILD.gn  bootstrap_example.c  broadcast_example.c  example.h  feature_example.c  maintenance_example.c  service_example.c  service_recovery_example.c  specified_task_example.c  task_example.c
device/soc/hisilicon/hi3516dv300/sdk_linux/: BUILD.gn
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/: BUILD.gn  README.md
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/ext_util/: misc_util.h  posix_help.c
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/interconnection_server/: hisignalling.c
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/mpp_help/include/: ive_img.h  vgs_img.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/scenario/cnn_trash_classify/: README.md  cnn_trash_classify.c  cnn_trash_classify.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/scenario/hand_classify/: hand_classify.c  hand_classify.h  yolov2_hand_detect.c  yolov2_hand_detect.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/scenario/tennis_detect/: tennis_detect.cpp  tennis_detect.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/ai_sample/smp/: sample_ai_main.cpp  sample_media_ai.c  sample_media_ai.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/: BUILD.gn
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/ai_infer_process/: ai_infer_process.c  ai_infer_process.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/data_process/: message.c  message.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/dependency/: audio_test.c  audio_test.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/ext_util/: base_interface.c  base_interface.h  misc_util.c  posix_help.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/interconnection_server/: README.md  hisignalling.c  hisignalling.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/messaging/: data_store.c  data_store.h  json_helper.c  json_helper.h  messaging.c  messaging.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/mpp_help/include/: osd_img.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/mpp_help/src/: ive_img.c  osd_img.c  vgs_img.c
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/scenario/hand_classify/: README.md  hand_classify.c  hand_classify.h
device/soc/hisilicon/hi3516dv300/sdk_linux/sample/taurus/smart_vendor_ai/smp/: sample_ai_main.cpp  sample_media_ai.c  sample_media_ai.h  sample_media_opencv.cpp  sample_media_opencv.h  smart_vendor_ai_classification.c  smart_vendor_ai_classification.h  smart_vendor_classification.c  smart_vendor_classification.h  vendor_main.cpp
dl/: NOTICE  extract_val_test.sh
management_miniprogram/: app.json  project.config.json  project.private.config.json
management_miniprogram/pages/index/: index.js  index.wxml  index.wxss
mini-program/Hi3861OpenHarmony-master/: LICENSE  README.en.md  README.md  app.js  app.json  project.config.json  project.private.config.json
mini-program/Hi3861OpenHarmony-master/cloudfunctions/: package-lock.json
mini-program/Hi3861OpenHarmony-master/cloudfunctions/iothub-publish/: index.js
mini-program/Hi3861OpenHarmony-master/cloudfunctions/iothub-shadow-query/: index.js  package.json
mini-program/Hi3861OpenHarmony-master/pages/TencentCloud/: TencentCloud.js  TencentCloud.wxml  TencentCloud.wxss
mini-program/Hi3861OpenHarmony-master/pages/index/: index.js  index.wxml  index.wxss
mini-program/Hi3861OpenHarmony-master/pages/login/: login.js  login.wxml  login.wxss
mini-program/Hi3861OpenHarmony-master/pages/msgSendRead/: msgSendRead.js  msgSendRead.wxml  msgSendRead.wxss
mini-program/Hi3861OpenHarmony-master/pages/type/: type.js  type.wxml  type.wxss
miniprogram_ui/: app.json  app.wxss  project.config.json  project.private.config.json
miniprogram_ui/pages/face/: face.js  face.wxml  face.wxss
miniprogram_ui/pages/index/: index.js  index.wxml  index.wxss
miniprogram_ui/pages/pay/: pay.js  pay.wxml  pay.wxss
(+63 files in other folders)
