# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("example_samgr") {
  sources = [
    "//test/xts/acts/distributed_schedule_lite/samgr_hal/utils/samgr_maintenance.c",
    "bootstrap_example.c",
    "broadcast_example.c",
    "feature_example.c",
    "maintenance_example.c",
    "service_example.c",
    "service_recovery_example.c",
    "specified_task_example.c",
    "task_example.c",
  ]

  include_dirs = [
    "//utils/native/lite/include",
    "//kernel/liteos_m/components/cmsis",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//foundation/distributedschedule/samgr_lite/samgr/adapter",
    "//foundation/distributedschedule/samgr_lite/samgr/source",
    "//test/xts/acts/distributed_schedule_lite/samgr_hal/utils",
  ]
}
